@@ -1508,8 +1508,8 @@ static void un_analyze_serverinfo (struct server *s) {
 
     //password required?
     // If not password=False or password=0, set SERVER_PASSWORD
-    else if (strcmp (*info_ptr, "password") == 0 && 
-    	( strcmp(info_ptr[1],"False") && strcmp(info_ptr[1],"0") ) )
+    else if (g_strcasecmp (*info_ptr, "password") == 0 && 
+	( g_strcasecmp(info_ptr[1],"false") && strcmp(info_ptr[1],"0") ) )
     {
       s->flags |= SERVER_PASSWORD;
       if (games[s->type].flags & GAME_SPECTATE)
