@@ -1,3 +1,7 @@
+Nov 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- add custom arguments for Death Ball UT2003 mod
+- use case insensitive compare for password in ut&co
+
 Oct 30, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - move definition of PACKAGE_DATA_DIR to Makefile.am as recommended in autoconf
   docu
